--- a/style.css
+++ b/style.css
@@ -20,6 +20,6 @@ body {
 
 .container1 {
     display: flex;
-    justify-content: space-between;    
+    justify-content: space-between; 
+    padding: 0px 20px;   
 }
-
