--- a/style.css
+++ b/style.css
@@ -23,3 +23,9 @@ body {
     justify-content: space-between; 
     padding: 0px 20px;   
 }
+
+.logo {
+    display: flex;
+    align-items: center;
+    
+}
