--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
     font-family: 'Courier New', Courier, monospace;
     font-size: 15px;
-    line-height: 1.5;
+    line-height: 1.4;
     color: rgb(41, 30, 30);
     background-color: dimgray;
 }
@@ -94,4 +94,15 @@ h2 {
 .header .container2 {
     display: flex;
     align-items: center;
+}
+
+button {
+    background-color: #6c2922;
+    padding: 10px 15px;
+    border-radius: 20px;
+    border: #0f1418;
+    border-style: outset;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: medium;
+    font-weight: 700;
 }
