Add hover to button

--- a/style.css
+++ b/style.css
@@ -106,3 +106,8 @@ button {
     font-size: medium;
     font-weight: 700;
 }
+
+.container2 button:hover {
+    color: #0f1418;
+    background-color: #ba1b23;
+}
