Fix typo on container line 103

--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ h2 {
     font-weight: 700;
 }
 
-.container2 button:hover {
+.container button:hover {
     color: #0f1418;
     background-color: #ba1b23;
 }
