--- a/style.css
+++ b/style.css
@@ -139,6 +139,8 @@ h2 {
     background-color: #6c2922;
     color: #fff;
     border-radius: 10px;
+    padding: 10px 0px;
+    margin-top: 10px;
     font-size: larger;
     font-weight: 700;
     font-style: italic;
