--- a/sign-up-style.css
+++ b/sign-up-style.css
@@ -70,6 +70,11 @@ li {
   background-color: #6c2922;
 }
 
+.container-h1 h1 {
+  padding-top: 20px;
+  color: #fff;
+}
+
 .header {
   background-color: #6c2922;
   padding: 20px;
