--- a/sign-up-style.css
+++ b/sign-up-style.css
@@ -85,3 +85,17 @@ li {
   justify-content: center;
   align-items: center;
 }
+
+.header input {
+    border: solid #0f1418;
+    border-radius: 5px;
+    font-size: 1.5em;
+    padding: 5px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 400px;
+}
