--- a/sign-up-style.css
+++ b/sign-up-style.css
@@ -91,6 +91,7 @@ li {
   border-radius: 5px;
   font-size: 1.5em;
   padding: 5px;
+  outline: none !important;
 }
 
 form {
@@ -137,3 +138,7 @@ form {
   font-size: large;
   color: #fff;
 }
+
+
+
+
