Add validation style for user feedback

--- a/sign-up-style.css
+++ b/sign-up-style.css
@@ -139,6 +139,28 @@ form {
   color: #fff;
 }
 
+/* validation style */
 
+input.valid {
+    border-color: rgb(0, 227, 0);
+}
 
+input.invalid {
+    border-color: rgb(255, 173, 19);
+}
 
+input + p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.9em ;
+    font-weight: 700;
+    margin: 10px;
+    color: rgb(255, 173, 19);
+    text-align: center;
+    opacity: 0;
+    height: 0;
+}
+
+input.invalid + p {
+    opacity: 1;
+    height: auto;
+}
