Give 100% height to header

--- a/sign-up-style.css
+++ b/sign-up-style.css
@@ -79,6 +79,7 @@ li {
 .header {
   background-color: #6c2922;
   padding: 20px;
+  height: 100%; /* check heigh in body for more info about why this */
 }
 
 .header .container {
