--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ body {
   font-size: x-large;
   font-weight: 700;
   line-height: 1.2;
+  margin: 5px 10px 5px 10px;
+  padding: 5px;
 }
 
 .navbar ul {
@@ -56,7 +58,9 @@ a {
   color: #fff;
   font-style: italic;
   font-family: "Courier New", Courier, monospace;
-  font-weight: 600;
+  font-weight: 600; 
+  margin: 5px;
+  padding: 5px;
 }
 
 li {
